# diesel-schema-parser

./: Cargo.toml  README.md
.circleci/: config.yml
examples/: config.json  template.txt
src/: generator.rs  lib.rs  main.rs  parser.rs  utils.rs
templates/: model.txt
